--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap"
       rel="stylesheet"
     />
-    <meta http-equiv="refresh" content="0;URL='/repo-name/'"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TikTok3</title>
   </head>
   <body>
